# ansible-collection-netobserv

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  galaxy.yml  pyproject.toml  trivy.yml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
examples/: requirements.yml
examples/netobserv_flow_es_simple/: README.md  ansible.cfg  playbook.yml
examples/netobserv_flow_os_simple/: README.md  playbook.yml  requirements.yml
hack/development/: ipaddrs-test.yaml  playbook-es.yml  playbook-os.yml  requirements.yml
local/: README.md
local/development/: ansible.cfg  playbook-es.yml  playbook-os.yml  requirements.yml
meta/: runtime.yml
plugins/modules/: ensure_single_config_source.py
roles/_collector_install/: README.md
roles/_collector_install/meta/: argument_specs.yml  main.yml
roles/_collector_install/tasks/: debian.yml  main.yml  redhat.yml
roles/_validate_vars/: README.md
roles/_validate_vars/tasks/: netobserv.yml
roles/elasticsearch_simple/: README.md
roles/elasticsearch_simple/defaults/: main.yml
roles/elasticsearch_simple/handlers/: main.yml
roles/elasticsearch_simple/meta/: argument_specs.yml  main.yml
roles/elasticsearch_simple/tasks/: main.yml
roles/elasticsearch_simple/templates/: docker-compose.yml.j2
roles/netobserv_flow/: README.md
roles/netobserv_flow/defaults/: main.yml
roles/netobserv_flow/handlers/: main.yml
roles/netobserv_flow/meta/: argument_specs.yml  (+1 more)
roles/opensearch_simple/: README.md
tests/sanity/: ignore-2.19.txt
(+20 files in other folders)
